Fix site-nav navigation spacing at narrow widths

--- a/_styles/_navigation.sass
+++ b/_styles/_navigation.sass
@@ -96,6 +96,10 @@ ul.site-nav
 		text-transform: uppercase
 		display: block
 		padding: 0 0.25em
+
+		@media (max-width: $narrow-width)
+			padding: 0 0.18em
+		
 	.home
 		text-indent: -999em
 		background: url(../images/icon-home.png) no-repeat 6px 10px
